target/generated-sources/antlr4/be/unamur/info/b314/compiler/PlayPlusParser.java
// Generated from be\u005Cunamur\info\b314\compiler\PlayPlus.g4 by ANTLR 4.6
package be.unamur.info.b314.compiler;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PlayPlusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BY=1, DEFAULT=2, DECLARE=3, AND=4, RETAIN=5, YOUR=6, TURN=7, WHEN=8, LOCAL=9, 
		AS=10, DO=11, DONE=12, LPAR=13, RPAR=14, LCRO=15, RCRO=16, COMMA=17, PLUS=18, 
		MINUS=19, POINT=20, POINTVIRGULE=21, DIVIDE=22, MODULO=23, TIMES=24, OR=25, 
		INF=26, SUP=27, EQUAL=28, NOT=29, TRUE=30, FALSE=31, NORTH=32, SOUTH=33, 
		EAST=34, WEST=35, ENNEMI=36, GRAAL=37, IS=38, LATITUDE=39, LONGITUDE=40, 
		GRIDSIZE=41, MAP=42, RADIO=43, RADAR=44, AMMO=45, FRUITS=46, SODA=47, 
		COUNT=48, LIFE=49, DIRT=50, ROCK=51, VINES=52, ZOMBIE=53, PLAYER=54, NEARBY=55, 
		SKIPCODE=56, IF=57, THEN=58, ELSE=59, WHILE=60, SET=61, TO=62, COMPUTE=63, 
		NEXT=64, MOVE=65, SHOOT=66, USE=67, NOTHING=68, FUNCTION=69, VOID=70, 
		RETURN=71, EXTWLD=72, DOUBLEPOINT=73, IMPORT=74, SCALAR=75, ID=76, VARDECL=77, 
		NUMBER=78, COMMENT_UNELIGNE=79, COMMENT=80, NEWLINE=81, WS=82;
	public static final int
		RULE_root = 0, RULE_programmemonde = 1, RULE_programmestrat = 2, RULE_clausewhen = 3, 
		RULE_clausewhencond = 4, RULE_clausewhenins = 5, RULE_clausedefault = 6, 
		RULE_endprog = 7, RULE_vardecl = 8, RULE_type = 9, RULE_array = 10, RULE_exprD = 11, 
		RULE_exprG = 12, RULE_exprEnt = 13, RULE_exprCase = 14, RULE_instruction = 15, 
		RULE_donewhile = 16, RULE_condblock = 17, RULE_truecondblock = 18, RULE_elsecondblock = 19, 
		RULE_action = 20, RULE_fctdecl = 21, RULE_fdeclreturn = 22, RULE_impdecl = 23, 
		RULE_filedecl = 24, RULE_filename = 25;
	public static final String[] ruleNames = {
		"root", "programmemonde", "programmestrat", "clausewhen", "clausewhencond", 
		"clausewhenins", "clausedefault", "endprog", "vardecl", "type", "array", 
		"exprD", "exprG", "exprEnt", "exprCase", "instruction", "donewhile", "condblock", 
		"truecondblock", "elsecondblock", "action", "fctdecl", "fdeclreturn", 
		"impdecl", "filedecl", "filename"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'by'", "'default'", "'declare'", "'and'", "'retain'", "'your'", 
		"'turn'", "'when'", "'local'", "'as'", "'do'", "'done'", "'('", "')'", 
		"'['", "']'", "','", "'+'", "'-'", "'.'", "';'", "'/'", "'%'", "'*'", 
		"'or'", "'<'", "'>'", "'='", "'not'", "'true'", "'false'", "'north'", 
		"'south'", "'east'", "'west'", "'ennemi'", "'graal'", "'is'", "'latitude'", 
		"'longitude'", "'grid size'", "'map'", "'radio'", "'radar'", "'ammo'", 
		"'fruits'", "'soda'", "'count'", "'life'", "'dirt'", "'rock'", "'vines'", 
		"'zombie'", "'player'", "'nearby'", "'skip'", "'if'", "'then'", "'else'", 
		"'while'", "'set'", "'to'", "'compute'", "'next'", "'move'", "'shoot'", 
		"'use'", "'nothing'", "'function'", "'void'", "'return'", "'.wld'", "':'", 
		"'import'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "BY", "DEFAULT", "DECLARE", "AND", "RETAIN", "YOUR", "TURN", "WHEN", 
		"LOCAL", "AS", "DO", "DONE", "LPAR", "RPAR", "LCRO", "RCRO", "COMMA", 
		"PLUS", "MINUS", "POINT", "POINTVIRGULE", "DIVIDE", "MODULO", "TIMES", 
		"OR", "INF", "SUP", "EQUAL", "NOT", "TRUE", "FALSE", "NORTH", "SOUTH", 
		"EAST", "WEST", "ENNEMI", "GRAAL", "IS", "LATITUDE", "LONGITUDE", "GRIDSIZE", 
		"MAP", "RADIO", "RADAR", "AMMO", "FRUITS", "SODA", "COUNT", "LIFE", "DIRT", 
		"ROCK", "VINES", "ZOMBIE", "PLAYER", "NEARBY", "SKIPCODE", "IF", "THEN", 
		"ELSE", "WHILE", "SET", "TO", "COMPUTE", "NEXT", "MOVE", "SHOOT", "USE", 
		"NOTHING", "FUNCTION", "VOID", "RETURN", "EXTWLD", "DOUBLEPOINT", "IMPORT", 
		"SCALAR", "ID", "VARDECL", "NUMBER", "COMMENT_UNELIGNE", "COMMENT", "NEWLINE", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlayPlus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlayPlusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public ProgrammemondeContext programmemonde() {
			return getRuleContext(ProgrammemondeContext.class,0);
		}
		public ProgrammestratContext programmestrat() {
			return getRuleContext(ProgrammestratContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			setState(54);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				programmemonde();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				programmestrat();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgrammemondeContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(PlayPlusParser.DECLARE, 0); }
		public TerminalNode AND() { return getToken(PlayPlusParser.AND, 0); }
		public TerminalNode RETAIN() { return getToken(PlayPlusParser.RETAIN, 0); }
		public ClausedefaultContext clausedefault() {
			return getRuleContext(ClausedefaultContext.class,0);
		}
		public List<VardeclContext> vardecl() {
			return getRuleContexts(VardeclContext.class);
		}
		public VardeclContext vardecl(int i) {
			return getRuleContext(VardeclContext.class,i);
		}
		public List<TerminalNode> POINTVIRGULE() { return getTokens(PlayPlusParser.POINTVIRGULE); }
		public TerminalNode POINTVIRGULE(int i) {
			return getToken(PlayPlusParser.POINTVIRGULE, i);
		}
		public List<FctdeclContext> fctdecl() {
			return getRuleContexts(FctdeclContext.class);
		}
		public FctdeclContext fctdecl(int i) {
			return getRuleContext(FctdeclContext.class,i);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public ProgrammemondeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programmemonde; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterProgrammemonde(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitProgrammemonde(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitProgrammemonde(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgrammemondeContext programmemonde() throws RecognitionException {
		ProgrammemondeContext _localctx = new ProgrammemondeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programmemonde);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(DECLARE);
			setState(57);
			match(AND);
			setState(58);
			match(RETAIN);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				setState(63);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(59);
					vardecl();
					setState(60);
					match(POINTVIRGULE);
					}
					break;
				case 2:
					{
					setState(62);
					fctdecl();
					}
					break;
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 56)) & ~0x3f) == 0 && ((1L << (_la - 56)) & ((1L << (SKIPCODE - 56)) | (1L << (IF - 56)) | (1L << (WHILE - 56)) | (1L << (SET - 56)) | (1L << (COMPUTE - 56)) | (1L << (NEXT - 56)))) != 0)) {
				{
				{
				setState(68);
				instruction();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			clausedefault();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgrammestratContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(PlayPlusParser.DECLARE, 0); }
		public TerminalNode AND() { return getToken(PlayPlusParser.AND, 0); }
		public TerminalNode RETAIN() { return getToken(PlayPlusParser.RETAIN, 0); }
		public TerminalNode WHEN() { return getToken(PlayPlusParser.WHEN, 0); }
		public TerminalNode YOUR() { return getToken(PlayPlusParser.YOUR, 0); }
		public TerminalNode TURN() { return getToken(PlayPlusParser.TURN, 0); }
		public ClausedefaultContext clausedefault() {
			return getRuleContext(ClausedefaultContext.class,0);
		}
		public List<ImpdeclContext> impdecl() {
			return getRuleContexts(ImpdeclContext.class);
		}
		public ImpdeclContext impdecl(int i) {
			return getRuleContext(ImpdeclContext.class,i);
		}
		public List<VardeclContext> vardecl() {
			return getRuleContexts(VardeclContext.class);
		}
		public VardeclContext vardecl(int i) {
			return getRuleContext(VardeclContext.class,i);
		}
		public List<TerminalNode> POINTVIRGULE() { return getTokens(PlayPlusParser.POINTVIRGULE); }
		public TerminalNode POINTVIRGULE(int i) {
			return getToken(PlayPlusParser.POINTVIRGULE, i);
		}
		public List<FctdeclContext> fctdecl() {
			return getRuleContexts(FctdeclContext.class);
		}
		public FctdeclContext fctdecl(int i) {
			return getRuleContext(FctdeclContext.class,i);
		}
		public List<ClausewhenContext> clausewhen() {
			return getRuleContexts(ClausewhenContext.class);
		}
		public ClausewhenContext clausewhen(int i) {
			return getRuleContext(ClausewhenContext.class,i);
		}
		public ProgrammestratContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programmestrat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterProgrammestrat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitProgrammestrat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitProgrammestrat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgrammestratContext programmestrat() throws RecognitionException {
		ProgrammestratContext _localctx = new ProgrammestratContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_programmestrat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(DECLARE);
			setState(77);
			match(AND);
			setState(78);
			match(RETAIN);
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(79);
				impdecl();
				}
				break;
			}
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT || _la==ID) {
				{
				setState(87);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(82);
					vardecl();
					setState(83);
					match(POINTVIRGULE);
					}
					break;
				case 2:
					{
					setState(85);
					fctdecl();
					}
					break;
				case 3:
					{
					setState(86);
					impdecl();
					}
					break;
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(WHEN);
			setState(93);
			match(YOUR);
			setState(94);
			match(TURN);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHEN) {
				{
				{
				setState(95);
				clausewhen();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			clausedefault();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClausewhenContext extends ParserRuleContext {
		public ClausewhenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clausewhen; }
	 
		public ClausewhenContext() { }
		public void copyFrom(ClausewhenContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InsideClauseWHENContext extends ClausewhenContext {
		public TerminalNode WHEN() { return getToken(PlayPlusParser.WHEN, 0); }
		public ClausewhencondContext clausewhencond() {
			return getRuleContext(ClausewhencondContext.class,0);
		}
		public TerminalNode DO() { return getToken(PlayPlusParser.DO, 0); }
		public ClausewheninsContext clausewhenins() {
			return getRuleContext(ClausewheninsContext.class,0);
		}
		public TerminalNode DONE() { return getToken(PlayPlusParser.DONE, 0); }
		public TerminalNode DECLARE() { return getToken(PlayPlusParser.DECLARE, 0); }
		public TerminalNode LOCAL() { return getToken(PlayPlusParser.LOCAL, 0); }
		public List<VardeclContext> vardecl() {
			return getRuleContexts(VardeclContext.class);
		}
		public VardeclContext vardecl(int i) {
			return getRuleContext(VardeclContext.class,i);
		}
		public List<TerminalNode> POINTVIRGULE() { return getTokens(PlayPlusParser.POINTVIRGULE); }
		public TerminalNode POINTVIRGULE(int i) {
			return getToken(PlayPlusParser.POINTVIRGULE, i);
		}
		public InsideClauseWHENContext(ClausewhenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterInsideClauseWHEN(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitInsideClauseWHEN(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitInsideClauseWHEN(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClausewhenContext clausewhen() throws RecognitionException {
		ClausewhenContext _localctx = new ClausewhenContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_clausewhen);
		int _la;
		try {
			_localctx = new InsideClauseWHENContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(WHEN);
			setState(104);
			clausewhencond();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DECLARE) {
				{
				setState(105);
				match(DECLARE);
				setState(106);
				match(LOCAL);
				setState(110); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(107);
					vardecl();
					setState(108);
					match(POINTVIRGULE);
					}
					}
					setState(112); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID );
				}
			}

			setState(116);
			match(DO);
			setState(117);
			clausewhenins();
			setState(118);
			match(DONE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClausewhencondContext extends ParserRuleContext {
		public ClausewhencondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clausewhencond; }
	 
		public ClausewhencondContext() { }
		public void copyFrom(ClausewhencondContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InsideClauseWHENCondContext extends ClausewhencondContext {
		public ExprDContext exprD() {
			return getRuleContext(ExprDContext.class,0);
		}
		public InsideClauseWHENCondContext(ClausewhencondContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterInsideClauseWHENCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitInsideClauseWHENCond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitInsideClauseWHENCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClausewhencondContext clausewhencond() throws RecognitionException {
		ClausewhencondContext _localctx = new ClausewhencondContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_clausewhencond);
		try {
			_localctx = new InsideClauseWHENCondContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			exprD(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClausewheninsContext extends ParserRuleContext {
		public ClausewheninsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clausewhenins; }
	 
		public ClausewheninsContext() { }
		public void copyFrom(ClausewheninsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InsideClauseWHENInsContext extends ClausewheninsContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public InsideClauseWHENInsContext(ClausewheninsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterInsideClauseWHENIns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitInsideClauseWHENIns(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitInsideClauseWHENIns(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClausewheninsContext clausewhenins() throws RecognitionException {
		ClausewheninsContext _localctx = new ClausewheninsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_clausewhenins);
		int _la;
		try {
			_localctx = new InsideClauseWHENInsContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(123); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(122);
				instruction();
				}
				}
				setState(125); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 56)) & ~0x3f) == 0 && ((1L << (_la - 56)) & ((1L << (SKIPCODE - 56)) | (1L << (IF - 56)) | (1L << (WHILE - 56)) | (1L << (SET - 56)) | (1L << (COMPUTE - 56)) | (1L << (NEXT - 56)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClausedefaultContext extends ParserRuleContext {
		public ClausedefaultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clausedefault; }
	 
		public ClausedefaultContext() { }
		public void copyFrom(ClausedefaultContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InsideClauseDefaultContext extends ClausedefaultContext {
		public TerminalNode BY() { return getToken(PlayPlusParser.BY, 0); }
		public TerminalNode DEFAULT() { return getToken(PlayPlusParser.DEFAULT, 0); }
		public TerminalNode DO() { return getToken(PlayPlusParser.DO, 0); }
		public EndprogContext endprog() {
			return getRuleContext(EndprogContext.class,0);
		}
		public TerminalNode DECLARE() { return getToken(PlayPlusParser.DECLARE, 0); }
		public TerminalNode LOCAL() { return getToken(PlayPlusParser.LOCAL, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public List<VardeclContext> vardecl() {
			return getRuleContexts(VardeclContext.class);
		}
		public VardeclContext vardecl(int i) {
			return getRuleContext(VardeclContext.class,i);
		}
		public List<TerminalNode> POINTVIRGULE() { return getTokens(PlayPlusParser.POINTVIRGULE); }
		public TerminalNode POINTVIRGULE(int i) {
			return getToken(PlayPlusParser.POINTVIRGULE, i);
		}
		public InsideClauseDefaultContext(ClausedefaultContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).enterInsideClauseDefault(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlayPlusListener ) ((PlayPlusListener)listener).exitInsideClauseDefault(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlayPlusVisitor ) return ((PlayPlusVisitor<? extends T>)visitor).visitInsideClauseDefault(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClausedefaultContext clausedefault() throws RecognitionException {
		ClausedefaultContext _localctx = new ClausedefaultContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_clausedefault);
		int _la;
		try {
			_localctx = new InsideClauseDefaultContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(BY);
			setState(128);
			match(DEFAULT);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DECLARE) {
				{
				setState(129);
				match(DECLARE);
				setState(130);
				match(LOCAL);
				setState(134); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(131);
					vardecl();
					setState(132);
					match(POINTVIRGULE);
					}
					}
					setState(136); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID );
				}
			}

			setState(140);
			match(DO);
			setState(142); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(141);
				instruction();
				}
				}
				setState(144); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 56)) & ~0x3f) == 0 && ((1L << (_la - 56)) & ((1L << (SKIPCODE - 56)) | (1L << (IF - 56)) | (1L << (WHILE - 56)) | (1L << (SET - 56)) | (1L << (COMPUTE - 56)) | (1L << (NEXT - 56)))) != 0) );
			setState(146);
			endprog();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
